--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="initial" id="droite" data-fullname="echea">L</span>
     </div>
     <div id="center-container">
-        <a href="#" class="category-link" id="link1">PHOTOGRAPHY.</a>
+        <a href="./photography.html" class="category-link" id="link1">PHOTOGRAPHY.</a>
         <a href="./video.html" class="category-link" id="link2">VIDEOS.</a>
         <a href="./projects.html" class="category-link" id="link3">PROJECTS.</a>
         <a href="#" class="category-link" id="link4">ABOUT.</a>
