--- a/photography.html
+++ b/photography.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="photography.css">
 </head>
 <body>
     <div id="black-screen"></div>
@@ -13,8 +14,8 @@
         <span class="separator"> / </span>
         <span class="initial" id="droite" data-fullname="echea">L</span>
     </div>
-    <div id="center-container">
-        <a href="./photography.htlm" class="category-link" id="link1">PHOTOGRAPHY.</a>
+     <div id="center-container">
+        <a href="./photography.html" class="category-link" id="link1">PHOTOGRAPHY.</a>
         <a href="./video.html" class="category-link" id="link2">VIDEOS.</a>
         <a href="./projects.html" class="category-link" id="link3">PROJECTS.</a>
         <a href="#" class="category-link" id="link4">ABOUT.</a>
